# SCZR_raspberry_pi_telephone

./: .gitignore  .gitmodules
rasberrypi-backend/: CMakeLists.txt  main.cc
rasberrypi-backend/inc/: audio.hpp  config.hpp  error.hpp  fd_selector.hpp  ipc.hpp  mic.hpp  mock_mic.hpp  mock_mic_generator.hpp  net.hpp  transmission.hpp
rasberrypi-backend/protocol/: CMakeLists.txt  protocol.proto
rasberrypi-backend/src/: audio.cc  fd_selector.cc  ipc.cc  mic.cc  mock_mic.cc  mock_mic_generator.cc  net.cc  proces1.cc  proces2.cc  transmission.cc
rasberrypi-backend/tests/: CMakeLists.txt
rasberrypi-backend/tests/src/: audio.cc  audio_from_mic.cc  audio_from_mic_over_network.cc  audio_generator.cc  audio_player.cc  benchmark.cc  deque_test.cc  ipc.cc  mic_dump_to_file.cc  mock_mic_generator.cc  network.cc  network_tcp.cc  network_udp.cc  sem.cc  spin_lock.cc  transmit.cc
stm32-firmware/: .cproject  .mxproject  .project  firmware.ioc  firmware.launch  stm32-firmware.ioc  stm32-firmware.launch
stm32-firmware/Core/Inc/: config.h  stm32f1xx_hal_conf.h
stm32-firmware/Core/Src/: main.c  stm32f1xx_hal_msp.c
